2011-06-21  Nick Alcock  <nick.alcock@oracle.com>

	Improve intermediate format printing.

	* libdtrace/dt_as.c (dt_as): Do not emit intermediate output here.

	* libdtrace/dt_cc.c (dtrace_program_strcompile): Emit it here instead.
	(dtrace_program_fcompile): Likewise.

	* libdtrace/dt_dis.c: Include <dt_printf.h>.
	(dt_dis): Rename to...
	(dt_dis_difo): ... this.  No longer print out the header line.
	(dt_dis_action): New, decode action names and printf() and
	printa() format strings.
	(dt_dis_format_print): New, print printf() and printa() format strings,
	eliding trailing linefeeds.
	(dt_dis_stmts): Disassemble a statement, including name of
	containing probe.
	(dt_dis_program): Disassemble a DTrace program.
	(dt_dis_iter): New helper type.
	* libdtrace/dt_impl.h: Drop dt_dis() in favour of dt_dis_program().

2011-06-17  Nick Alcock  <nick.alcock@oracle.com>

	Fix locking and signal handling around process termination.

	* libdtrace/dt_proc.h (dt_proc_t): Remove dpr_quit.  Maintain
	dpr_tid_locked inside the control thread to detect cancellation
	while dpr_lock is held.

	* libdtrace/dt_proc.c (dt_proc_control_cleanup): New cancellation
	function for control threads.
	(dt_proc_control): Call it.  No longer disable cancellation.  No
	longer mention SIGCANCEL or SIGUSR1, or check dpr_quit.  Remove
	unnecessary holds of dpr_lock.  Track dpr_tid_locked around
	dpr_lock holds.  Warn on PS_TRACESTOP hits, but do not terminate.
	Clean up on process exit using the cleanup function.
	(dt_proc_destroy): No longer grab dpr_lock around the dph cleanup.
	No longer set dpr_quit or send SIGUSR1: pthread_cancel() instead.
	Fix locking.
	(dt_proc_create_thread): No longer unmask SIGUSR1.
	(dt_proc_control_data): Spelling fix.

	* libproc/common/Pcontrol.c (blockable_sigs): Remove.
	(_libproc_init): Likewise.

2011-06-16  Nick Alcock  <nick.alcock@oracle.com>

	Drop obsolescent LFS transitional functions.
	Support CFLAGS modification from the command line better.
